add methods associate debit
